Fixed background issue on Firefox OS
Also, minor code format change

--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -87,7 +87,8 @@
 		opacity: .7;
 	}
 
-    .main-view, .detail-view {
+    .main-view,
+    .detail-view {
 		background-color: #f5f5f5;
 	}
 
